log/build_2024-04-20_12-19-52/manos_manager/stderr.log
  File "/home/field/MANOS/install/manos_manager/lib/python3.8/site-packages/manos_manager/manos_manager.py", line 102
    self.servo_controller =
                           ^
SyntaxError: invalid syntax

